--- a/Designer/Interface/Project/GenerationTarget.xaml
+++ b/Designer/Interface/Project/GenerationTarget.xaml
@@ -22,6 +22,7 @@
 			<ColumnDefinition Width=".5*" />
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="Auto" />
+			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="35" />
 		</Grid.ColumnDefinitions>
 
@@ -47,8 +48,8 @@
 			<ComboBoxItem Content=".NET Framework 3.5 Client Profile" />
 			<ComboBoxItem Content=".NET Framework 3.0" />-->
 		</ComboBox>
-
-		<Button Name="Delete" Grid.Column="4" Margin="5,5,0,5" Click="Delete_Click" Padding="0" HorizontalContentAlignment="Center" >
+		<ToggleButton IsChecked="{Binding Path.IsDefaultIncluded}" Content="Include by Default" Grid.Column="4" Margin="5" ToolTip="Specifies whether or not new types should be included in this Generation Target by default. When this box is unchecked you will be required to manually add any new types to this Generation Target." />
+		<Button Name="Delete" Grid.Column="5" Margin="5,5,0,5" Click="Delete_Click" Padding="0" HorizontalContentAlignment="Center" >
 			<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 		</Button>
 	</Grid>
