--- a/Designer/Interface/WebApi/Data/DataElement.xaml
+++ b/Designer/Interface/WebApi/Data/DataElement.xaml
@@ -108,9 +108,9 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="15" />
 			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
 			<RowDefinition Height="15" />
 			<RowDefinition Height="Auto" />
-			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 		<Label Content="Data Contract:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="0" />
 		<ToggleButton Grid.Column="1" Grid.Row="0" Content="Data Member" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsDataMember}" Name="IsDataMember" ToolTip="Determines if the member is marked as a member of the data contract." />
@@ -119,10 +119,13 @@
 		<ToggleButton Grid.Column="1" Grid.Row="1" Content="Required" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsRequired}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="IsRequired" ToolTip="The member is required by the data contract." />
 		<ToggleButton Grid.Column="2" Grid.Row="1" Content="Emit Default Value" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.EmitDefaultValue}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="EmitDefaultValue" ToolTip="Force WebApi emit the default value for the type if no value is provided." />
 		<pc:TextBox Grid.Column="3" Grid.Row="1" Margin="5" Name="Order" LabelText="DataMember Order" Text="{Binding Path=Element.Order, Converter={StaticResource ElementOrderConverter}}" Validate="Order_Validate" />
-		<Label Content="Advanced:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="3" />
-		<ToggleButton Grid.Column="1" Grid.Row="3" Content="WinForms Binding" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.GenerateWinFormsSupport}" IsEnabled="{Binding Path=Element.IsDataMember}" ToolTip="Generates support for Windows Forms INotifyPropertyChanged databinding." />
-		<ToggleButton Grid.Column="2" Grid.Row="3" Content="Enable Update Service" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.EnableUpdates}" IsEnabled="{Binding Path=Element.IsDataMember}" ToolTip="Determines whether this element participates in the Automatic Update Service." />
-		<ToggleButton Grid.Column="3" Grid.Row="3" Content="Is Update Service Lookup Value" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsUpdateLookup}" IsEnabled="{Binding Path=Element.IsDataMember}" ToolTip="Specifies this element as a lookup value used by the Automatic Update Service for locating the record to update." />
+		<Label Content="Automatic Updates:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="3" />
+		<ToggleButton Grid.Column="1" Grid.Row="3" Content="Enable Update Service" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.EnableUpdates}" IsEnabled="{Binding Path=Element.IsDataMember}" ToolTip="Determines whether this element participates in the Automatic Update Service." />
+		<ToggleButton Grid.Column="2" Grid.Row="3" Content="Is Update Service Lookup Value" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsUpdateLookup}" IsEnabled="{Binding Path=Element.IsDataMember}" ToolTip="Specifies this element as a lookup value used by the Automatic Update Service for locating the record to update." />
+		<pc:TextBox Grid.Column="1" Grid.Row="4" Margin="5" MinHeight="24" Text="{Binding Path=Element.UpdateAuthenticationFilter, UpdateSourceTrigger=PropertyChanged}" LabelText="Authentication Filter" IsEnabled="{Binding Path=Element.EnableUpdates}" VerticalContentAlignment="Center" Validate="ElementName_Validate" />
+		<pc:TextBox Grid.Column="2" Grid.Row="4" Margin="5" MinHeight="24" Text="{Binding Path=Element.UpdateAuthorizationFilter, UpdateSourceTrigger=PropertyChanged}" LabelText="Authorization Filter" IsEnabled="{Binding Path=Element.EnableUpdates}" VerticalContentAlignment="Center" Validate="ElementName_Validate" />
+		<Label Content="Advanced:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="6" />
+		<ToggleButton Grid.Column="1" Grid.Row="6" Content="WinForms Binding" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.GenerateWinFormsSupport}" IsEnabled="{Binding Path=Element.IsDataMember}" ToolTip="Generates support for Windows Forms INotifyPropertyChanged databinding." />
 	</Grid>
 	<Label Content="Documentation" FontSize="12pt" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="9" />
 	<Docs:Standard Grid.Column="0" Grid.Row="10" x:Name="Docs" Margin="0,5" IsProperty="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Documentation="{Binding Path=Element.Documentation}" />
