--- a/Designer/Interface/WebApi/Service/Service.xaml
+++ b/Designer/Interface/WebApi/Service/Service.xaml
@@ -102,6 +102,7 @@
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
+		<RowDefinition Height="Auto" />
 		<RowDefinition Height="*" />
 	</Grid.RowDefinitions>
 	<Grid.ColumnDefinitions>
@@ -110,9 +111,18 @@
 	</Grid.ColumnDefinitions>
 	<Label Grid.Row="0" Margin="5" Padding="5,0" Content="Server:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
 	<Data:TypeEditor OpenType="{Binding Path=ServiceType}" CanSetType="False" SupportInheritedTypes="False" SupportKnownTypes="True" Grid.Row="0" Grid.Column="1" Margin="0" />
-	<Data:TargetSelector Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" OpenType="{Binding Path=ServiceType}" IsServerType="True" Visibility="Visible" />
-	<Data:TargetSelector Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" OpenType="{Binding Path=ServiceType}" IsServerType="False" Visibility="Visible" />
-	<TabControl Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,10,0,0">
+	<Label Grid.Row="1" Margin="5" Padding="5,0" Content="Security:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
+	<Grid Grid.Row="1" Grid.Column="1">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
+		<pc:TextBox Text="{Binding Path=ServiceType.AuthenticationFilter, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" Grid.Column="0" Margin="5" LabelText="Default Authentication Filter" />
+		<pc:TextBox Text="{Binding Path=ServiceType.AuthorizationFilter, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" Grid.Column="1" Margin="5" LabelText="Default Authorization Filter" />
+	</Grid>
+	<Data:TargetSelector Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" OpenType="{Binding Path=ServiceType}" IsServerType="True" Visibility="Visible" />
+	<Data:TargetSelector Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" OpenType="{Binding Path=ServiceType}" IsServerType="False" Visibility="Visible" />
+	<TabControl Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,10,0,0">
 		<TabItem Padding="10,5" IsSelected="True">
 			<TabItem.Header>
 				<TextBlock Text="Operations" FontSize="12pt"/>
