--- a/Designer/Main.xaml
+++ b/Designer/Main.xaml
@@ -4,10 +4,116 @@
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="clr-namespace:RestForge.Designer"
-		mc:Ignorable="d" d:DesignHeight="1040" d:DesignWidth="1880"
-		MinHeight="1040" MinWidth="1880" DataContext="{Binding RelativeSource={RelativeSource Self}}" Style="{StaticResource MainWindowStyle}"
+		xmlns:ebext="clr-namespace:EllipticBit.Controls.WPF.Extensions;assembly=EllipticBit.Controls.WPF"
+		mc:Ignorable="d" d:DesignHeight="1040" d:DesignWidth="1920"
+		MinHeight="1040" MinWidth="1920" DataContext="{Binding RelativeSource={RelativeSource Self}}" Style="{StaticResource MainWindowStyle}"
 		Title="RestForge">
+	<Window.Resources>
+		<ebext:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
+	</Window.Resources>
 	<Grid>
-
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="*" />
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="30" />
+			</Grid.RowDefinitions>
+			<GridSplitter ResizeDirection="Rows" Grid.Column="0" Grid.Row="1" Width="5" Height="Auto" HorizontalAlignment="Right" VerticalAlignment="Stretch" Margin="0" Background="Transparent" />
+			<Grid x:Name="OutputGrid" Background="#FF222222" Grid.Row="1" IsHitTestVisible="True" Visibility="{Binding ElementName=ShowOutput, Path=IsChecked, Converter={StaticResource BoolVisibilityConverter}}" >
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="*" />
+				</Grid.RowDefinitions>
+				<TextBlock Text="OUTPUT" Foreground="{StaticResource DefaultFontColor}" FontSize="18pt" Margin="10,5" Grid.Row="0" />
+				<RichTextBox Name="OutputBox" BorderThickness="0" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" Grid.Row="1" Background="Transparent" FontSize="10pt" FontFamily="Courier New" Foreground="{StaticResource DefaultFontColor}" />
+			</Grid>
+			<Grid x:Name="ErrorGrid" Background="#FF222222" Grid.Row="1" IsHitTestVisible="True" Visibility="{Binding ElementName=ShowErrors, Path=IsChecked, Converter={StaticResource BoolVisibilityConverter}}" >
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="*" />
+				</Grid.RowDefinitions>
+				<TextBlock Text="ERRORS" Foreground="{StaticResource DefaultFontColor}" FontSize="18pt" Margin="10,5" Grid.Row="0" />
+				<StackPanel Orientation="Horizontal" Background="#FF222222" Grid.Row="1">
+					<ToggleButton x:Name="ErrorShowErrors" Content="ERRORS" Background="#44FF0000" Width="175" FontSize="12pt" IsChecked="True" />
+					<ToggleButton x:Name="ErrorShowWarnings" Content="WARNINGS" Background="#44FF8800" Width="175" FontSize="12pt" IsChecked="True" />
+					<ToggleButton x:Name="ErrorShowInfo" Content="INFORMATION" Background="#440000FF" Width="175" FontSize="12pt" IsChecked="False" />
+				</StackPanel>
+				<Grid UseLayoutRounding="True" Background="#FF222222" Grid.Row="2" Margin="0,10,0,0" >
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Name="ItemsGridCD1" Width="24" />
+						<ColumnDefinition Name="ItemsGridCD2" Width="75" />
+						<ColumnDefinition Name="ItemsGridCD3" Width="*" />
+						<ColumnDefinition Name="ItemsGridCD4" Width="125" />
+						<ColumnDefinition Name="ItemsGridCD5" Width="125" />
+						<ColumnDefinition Width="15" />
+					</Grid.ColumnDefinitions>
+					<TextBlock Text="Code" Grid.Column="1" Margin="5" FontSize="10pt" />
+					<TextBlock Text="Description" Grid.Column="2" Margin="5" FontSize="10pt" />
+					<TextBlock Text="Line" Grid.Column="3" Margin="5" FontSize="10pt" />
+					<TextBlock Text="Item" Grid.Column="4" Margin="5" FontSize="10pt" />
+					<TextBlock Text="Project" Grid.Column="5" Margin="5" FontSize="10pt" />
+				</Grid>
+				<ListBox ItemsSource="{Binding Path=GeneratorMessages}" x:Name="ErrorList" Grid.Row="3" Background="Transparent" BorderThickness="0" Margin="0" ScrollViewer.VerticalScrollBarVisibility="Visible">
+					<ListBox.Resources>
+						<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#00FFFFFF"/>
+					</ListBox.Resources>
+					<ListBox.ItemTemplate>
+						<DataTemplate DataType="{x:Type local:GeneratorMessageXaml}">
+							<Border Name="BG" Background="Transparent" Margin="-1,-1,-1,0"  >
+								<Grid Grid.Column="0">
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="{Binding ElementName=ItemsGridCD1, Path=Width}" />
+										<ColumnDefinition Width="{Binding ElementName=ItemsGridCD2, Path=Width}" />
+										<ColumnDefinition Width="{Binding ElementName=ItemsGridCD3, Path=Width}" />
+										<ColumnDefinition Width="{Binding ElementName=ItemsGridCD4, Path=Width}" />
+										<ColumnDefinition Width="{Binding ElementName=ItemsGridCD5, Path=Width}" />
+									</Grid.ColumnDefinitions>
+									<Grid.RowDefinitions>
+										<RowDefinition Height="20" />
+									</Grid.RowDefinitions>
+									<Path Style="{Binding Path=Severity, Converter={StaticResource CompileMessageSeverityImageConverter}}" Grid.Column="0" />
+									<TextBlock Text="{Binding Path=Code}" Grid.Column="1" Padding="3,1" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="Black" />
+									<TextBlock Text="{Binding Path=Description}" Grid.Column="2" Padding="3,1" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="Black" />
+									<TextBlock Text="{Binding Path=ErrorObject}" Grid.Column="3" Padding="3,1" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="Black" />
+									<TextBlock Text="{Binding Path=Owner}" Grid.Column="4" Padding="3,1" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="Black" />
+								</Grid>
+							</Border>
+							<DataTemplate.Triggers>
+								<MultiDataTrigger>
+									<MultiDataTrigger.Conditions>
+										<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" />
+										<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="False" />
+									</MultiDataTrigger.Conditions>
+									<Setter TargetName="BG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
+								</MultiDataTrigger>
+								<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True" >
+									<Setter TargetName="BG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
+								</DataTrigger>
+							</DataTemplate.Triggers>
+						</DataTemplate>
+					</ListBox.ItemTemplate>
+				</ListBox>
+			</Grid>
+			<StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" Margin="0,0" HorizontalAlignment="Right" >
+				<ToggleButton x:Name="ShowErrors" Background="#FF440000" Width="200" FontSize="12pt" >
+					<StackPanel Orientation="Horizontal">
+						<TextBlock Text="ERRORS" />
+						<TextBlock Text="{Binding Path=ErrorCount, TargetNullValue=''}" FontSize="9pt" Margin="2,0,0,0" />
+					</StackPanel>
+				</ToggleButton>
+				<ToggleButton x:Name="ShowOutput" Content="OUTPUT" Background="#FF111188" Width="200" FontSize="12pt" />
+				<Border Height="30" Width="30" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" IsHitTestVisible="False">
+					<Border.Background>
+						<LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+							<GradientStop Color="#00222222" Offset="0" />
+							<GradientStop Color="#00222222" Offset="0.5" />
+							<GradientStop Color="#FF0078C8" Offset="1" />
+						</LinearGradientBrush>
+					</Border.Background>
+				</Border>
+			</StackPanel>
+		</Grid>
 	</Grid>
 </Window>
