--- a/Designer/Interface/WebApi/Service/Method.xaml
+++ b/Designer/Interface/WebApi/Service/Method.xaml
@@ -161,6 +161,7 @@
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
+		<RowDefinition Height="Auto" />
 		<RowDefinition Height="*" />
 	</Grid.RowDefinitions>
 	<TextBlock Text="{Binding Path=MethodData.Declaration}" FontSize="14pt" Margin="0,5" Grid.Row="0" Grid.ColumnSpan="2" TextWrapping="Wrap" />
@@ -182,7 +183,9 @@
 	</ComboBox>
 	<Label Content="Method:" Grid.Column="1" Grid.Row="2" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="60" Visibility="{Binding Path=MethodData.Method, Converter={StaticResource MethodVerbsVisibilityConverter}}" />
 	<pc:TextBox Text="{Binding Path=MethodData.CustomMethod}" Grid.Column="1" Grid.Row="2" Height="23" Margin="65,5,5,5" Visibility="{Binding Path=MethodData.Method, Converter={StaticResource MethodVerbsVisibilityConverter}}" />
-	<TabControl Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,10,0,0">
+	<pc:TextBox Grid.Column="0" Grid.Row="3" Margin="5" MinHeight="24" Text="{Binding Path=MethodData.AuthenticationFilter, UpdateSourceTrigger=PropertyChanged}" LabelText="Authentication Filter" VerticalContentAlignment="Center" Validate="AddContentParameterName_Validate" />
+	<pc:TextBox Grid.Column="1" Grid.Row="3" Margin="5" MinHeight="24" Text="{Binding Path=MethodData.AuthorizationFilter, UpdateSourceTrigger=PropertyChanged}" LabelText="Authorization Filter" VerticalContentAlignment="Center" Validate="AddContentParameterName_Validate" />
+	<TabControl Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,10,0,0">
 		<TabItem Padding="10,5" IsSelected="True">
 			<TabItem.Header>
 				<TextBlock Text="Parameters" FontSize="12pt"/>
