--- a/Designer/Interface/WebApi/Service/Service.xaml
+++ b/Designer/Interface/WebApi/Service/Service.xaml
@@ -109,9 +109,9 @@
 		<ColumnDefinition Width="130" />
 		<ColumnDefinition Width="*" />
 	</Grid.ColumnDefinitions>
-	<Label Grid.Row="0" Margin="5" Padding="5,0" Content="Server:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
+	<Label Grid.Column="0" Grid.Row="0" Margin="5" Padding="5,0" Content="Server:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
 	<Data:TypeEditor OpenType="{Binding Path=ServiceType}" CanSetType="False" SupportInheritedTypes="False" SupportKnownTypes="True" Grid.Row="0" Grid.Column="1" Margin="0" />
-	<Label Grid.Row="1" Margin="5" Padding="5,0" Content="Security:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
+	<Label Grid.Column="0" Grid.Row="1" Margin="5" Padding="5,0" Content="Security:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
 	<Grid Grid.Row="1" Grid.Column="1">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*" />
