--- a/Designer/Interface/Data/TypeSelector.xaml
+++ b/Designer/Interface/Data/TypeSelector.xaml
@@ -1,10 +1,10 @@
 ﻿<ContentControl x:Class="NETPath.Interface.Data.TypeSelector" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:pc="http://schemas.ellipticbit.com/controls"
-	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects" 
+	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
 	xmlns:Data="clr-namespace:NETPath.Interface.Data"
 	MinHeight="24" MinWidth="100"
 	mc:Ignorable="d" d:DesignHeight="24" d:DesignWidth="300"
@@ -17,6 +17,7 @@
 				<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Defaults.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 			<Data:DataTypeModeConverter x:Key="DataTypeModeConverter" />
+			<pc:NullVisibilityConverter x:Key="NullVisibilityConverter" />
 		</ResourceDictionary>
 	</ContentControl.Resources>
 	<Grid Name="BG">
@@ -33,6 +34,7 @@
 								<StackPanel Orientation="Horizontal">
 									<Image Source="{Binding Converter={StaticResource DataTypeModeConverter}}" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 									<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0,0,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" />
+									<TextBlock Name="DataTypeNamespace" Text="{Binding Path=Parent.FullName, StringFormat=' ({0})'}" Visibility="{Binding Parent.FullName, Converter={StaticResource NullVisibilityConverter}}" Margin="3,0,0,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource ReadOnlyFontColor}" FontFamily="{StaticResource DefaultFontFamily}" />
 								</StackPanel>
 							</Border>
 							<DataTemplate.Triggers>
